--- a/configure.in
+++ b/configure.in
@@ -292,7 +292,7 @@ if test $math_ok = no; then
    OPP_CHECK_LIB(math, math.h, floor(0), , -lm, math_ok, SYS_LIBS="-lm $SYS_LIBS")
 fi
 if test $math_ok = no; then
-   AC_MSG_ERROR([standard C math library -lm not found])
+   AC_MSG_ERROR([Standard C math library -lm not found])
 fi
 
 # -lstdc++
@@ -304,7 +304,7 @@ if test $stdcpp_ok = no; then
    OPP_CHECK_LIB(standard C++ lib, iostream, /**/, , -lcxa, stdcpp_ok, SYS_LIBS="-lcxa $SYS_LIBS")
 fi
 if test $stdcpp_ok = no; then
-   AC_MSG_ERROR([standard C++ library -lstdc++ or -lcxx or -lcxa not found])
+   AC_MSG_ERROR([Standard C++ library -lstdc++ or -lcxx or -lcxa not found])
 fi
 
 # dlopen()
@@ -374,9 +374,9 @@ else
     PLOVE_IF_POSSIBLE=missing-library
     if test "$no_x" = "yes"; then
         if test "$cygwin" = yes; then
-            AC_MSG_ERROR([cannot build Tcl/Tk apps, probably due to missing X11 headers -- try installing the XFree86 packages or get the X headers from the OMNeT++ site])
+            AC_MSG_ERROR([Cannot build Tcl/Tk apps, probably due to missing X11 headers -- try installing the XFree86 packages or get the X headers from the OMNeT++ site])
         else
-            AC_MSG_ERROR([cannot build Tcl/Tk apps, probably due to misconfigured or missing X11 headers or libs. Check config.log for more info!])
+            AC_MSG_ERROR([Cannot build Tcl/Tk apps, probably due to misconfigured or missing X11 headers or libs. Check config.log for more info!])
         fi
     else
         AC_MSG_ERROR([Tcl/Tk not found, needed for all GUI parts; version 8.4.0+ required])
@@ -386,10 +386,10 @@ fi
 # Check for wish.
 AC_CHECK_PROGS(WISH, $WISH wish wish85 wish8.5 wish84 wish8.4 cygwish cygwish85 cygwish84, nope)
 if test "$WISH" = nope; then
-   AC_MSG_ERROR([cannot find wish, part of Tcl/Tk -- maybe it is not in the PATH or has some exotic name (tested names were: wish wish85 wish84 cygwish cygwish85 cygwish84)])
+   AC_MSG_ERROR([Cannot find wish, part of Tcl/Tk -- maybe it is not in the PATH or has some exotic name (tested names were: wish wish85 wish8.5 wish84 wish8.4 cygwish cygwish85 cygwish84)])
 fi
 if echo 'puts OK; exit' | $WISH | grep OK >/dev/null; then :; else
-    AC_MSG_ERROR([cannot run wish (wish command "puts OK; exit" failed): maybe you're not running X or DISPLAY environment variable not set?])
+    AC_MSG_ERROR([Cannot run wish (wish command "puts OK; exit" failed): maybe you're not running X or DISPLAY environment variable not set?])
 fi
 if echo 'catch {package require Tk 8.4; puts OK}; exit' | $WISH | grep OK >/dev/null; then :; else
     AC_MSG_ERROR([wish command "package require Tk 8.4" failed: probably old Tcl/Tk version, version 8.4.0+ required])
@@ -404,11 +404,10 @@ if test $blt_ok = yes; then
     if echo 'catch {package require BLT 2.4; puts OK}; exit' | $WISH | grep OK >/dev/null; then :; else
         OPP_PROBLEM_PACKAGES="$OPP_PROBLEM_PACKAGES BLT"
         AC_MSG_WARN([Tcl cannot load BLT (wish command "package require BLT 2.4" failed), probably BLT not installed correctly.])
-        AC_MSG_WARN([Check your installation and try typing "package require BLT 2.4" on the wish prompt to verify!])
     fi
 else
     OPP_PROBLEM_PACKAGES="$OPP_PROBLEM_PACKAGES BLT"
-    AC_MSG_WARN([no BLT: Plove and Scalars will not build or work])
+    AC_MSG_WARN([Cannot compile or link program with BLT: BLT or BLT-devel may not be installed -- check config.log for details. Plove and Scalars require BLT to build.])
     HAVE_BLT=no
 fi
 
