*** empty log message ***

--- a/configure.in
+++ b/configure.in
@@ -93,7 +93,7 @@ OMNETPP_SAMPLES_DIR="$OMNETPP_ROOT/samples"
 OMNETPP_TUTORIAL_DIR="$OMNETPP_ROOT/tutorial"
 # OMNETPP_MODELS_DIR="$OMNETPP_ROOT/models"
 OMNETPP_TEST_DIR="$OMNETPP_ROOT/test"
-OMNETPP_BITMAP_PATH=".;./bitmaps;$OMNETPP_ROOT/bitmaps"
+OMNETPP_BITMAP_PATH="./bitmaps;$OMNETPP_ROOT/bitmaps"
 
 OMNETPP_BIN_DIR="$OMNETPP_ROOT/bin"
 OMNETPP_INCL_DIR="$OMNETPP_ROOT/include"
