--- a/samples/hist/.tkenvrc
+++ b/samples/hist/.tkenvrc
@@ -1,6 +1,6 @@
 "Histograms" "HistogramDemo" "1" "385x247+186+341"
-"Histograms.local-objects.LongHistogram" "cLongHistogram" "2" "320x195+9+2"
-"Histograms.local-objects.DoubleHistogram" "cDoubleHistogram" "2" "321x207+7+231"
-"Histograms.local-objects.VarHistogram" "cVarHistogram" "2" "322x185+8+472"
-"Histograms.local-objects.PSquare" "cPSquare" "2" "334x194+347+2"
-"Histograms.local-objects.K-Split" "cKSplit" "2" "386x322+347+230"
+"Histograms.LongHistogram" "cLongHistogram" "2" "320x195+9+2"
+"Histograms.DoubleHistogram" "cDoubleHistogram" "2" "321x207+7+231"
+"Histograms.VarHistogram" "cVarHistogram" "2" "322x185+8+472"
+"Histograms.PSquare" "cPSquare" "2" "334x194+347+2"
+"Histograms.K-Split" "cKSplit" "2" "386x322+347+230"
