--- a/samples/p-to-p/omnetpp.ini
+++ b/samples/p-to-p/omnetpp.ini
@@ -2,9 +2,9 @@
 network = pointToPointNet
 
 [Parameters]
-pointToPointNet.burstySrc.sleepTimeMean = exponential(2s)
-pointToPointNet.burstySrc.burstTimeMean = truncnormal(1s,0.3s)
-pointToPointNet.burstySrc.sendIaTime = exponential(0.005)
+pointToPointNet.burstySrc.sleepTime = exponential(0.5s)
+pointToPointNet.burstySrc.burstTime = truncnormal(0.2s,0.2s)
+pointToPointNet.burstySrc.sendIaTime = exponential(0.022)
 pointToPointNet.burstySrc.msgLength = intuniform(8,32768)
 
 pointToPointNet.ppIF*.frameCapacity=0
