*** empty log message ***

--- a/samples/tictoc/omnetpp.ini
+++ b/samples/tictoc/omnetpp.ini
@@ -1,7 +1,7 @@
 # lines beginning with `#' are comments
 
 [General]
-random-seed=123456
+seed-0-mt=2
 
 [Parameters]
 # truncnormal() is normal distribution truncated to nonnegative values
