--- a/doc/usman/Makefile.vc
+++ b/doc/usman/Makefile.vc
@@ -9,6 +9,7 @@ HTM_FILES = history.htm \
             ch-simple-modules.htm \
             ch-messages.htm \
             ch-sim-lib.htm \
+            ch-graphics.htm \
             ch-build-sim-progs.htm \
             ch-neddoc.htm \
             ch-run-sim.htm \
