*** empty log message ***

--- a/samples/tictoc/omnetpp.ini
+++ b/samples/tictoc/omnetpp.ini
@@ -1,10 +1,7 @@
 # lines beginning with `#' are comments
 
-[General]
-seed-0-mt=2
-
 [Parameters]
-# truncnormal() is normal distribution truncated to nonnegative values
+# truncnormal() returns values from the normal distribution truncated to nonnegative values
 tictoc6.toc.delayTime = truncnormal(3,1)
 
 tictoc9.n = 5
