*** empty log message ***

--- a/samples/tictoc/omnetpp.ini
+++ b/samples/tictoc/omnetpp.ini
@@ -1,4 +1,5 @@
-# lines beginning with `#' are comments
+# This file is shared by all tictoc simulations.
+# Lines beginning with `#' are comments
 
 [Parameters]
 # truncnormal() returns values from the normal distribution truncated to nonnegative values
