*** empty log message ***

--- a/doc/src/tictoc-tutorial/doxy.cfg
+++ b/doc/src/tictoc-tutorial/doxy.cfg
@@ -424,7 +424,7 @@ WARN_LOGFILE           =
 # with spaces.
 
 #AV: INPUT=tutorial.h is not enough: scheduleAt(), send() etc won't be hyperlinked...
-INPUT                  = tutorial.h ../../samples/tictoc
+INPUT                  = tutorial.h ../../../samples/tictoc
 
 # If the value of the INPUT tag contains directories, you can use the
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp
@@ -462,7 +462,7 @@ EXCLUDE_PATTERNS       =
 # directories that contain example code fragments that are included (see
 # the \include command).
 
-EXAMPLE_PATH           = ../../samples/tictoc
+EXAMPLE_PATH           = ../../../samples/tictoc
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp
@@ -585,7 +585,7 @@ GENERATE_HTML          = YES
 # If a relative path is entered the value of OUTPUT_DIRECTORY will be
 # put in front of it. If left blank `html' will be used as the default path.
 
-HTML_OUTPUT            = html
+HTML_OUTPUT            = ../../tictoc-tutorial
 
 # The HTML_FILE_EXTENSION tag can be used to specify the file extension for
 # each generated HTML page (for example: .htm,.php,.asp). If it is left blank
@@ -995,7 +995,7 @@ SKIP_FUNCTION_MACROS   = YES
 # If a tag file is not located in the directory in which doxygen
 # is run, you must also specify the path to the tagfile here.
 
-TAGFILES               = "../api/opptags.xml = ../../api/"
+TAGFILES               = "../../api/opptags.xml = ../../api/"
 
 # When a file name is specified after GENERATE_TAGFILE, doxygen will create
 # a tag file that is based on the input files it reads.
