--- a/doc/src/Makefile.vc
+++ b/doc/src/Makefile.vc
@@ -18,8 +18,8 @@ parsim-api:
 	$(DOXYGEN:/=\) parsim.doxyfile
 
 do-manual:
-	cd manual && $(MAKE) $(MOPTS) $(MAKEFILE)
+	cd manual && $(MAKE) -f Makefile.vc
 
 do-tictoc-tutorial:
-	cd tictoc-tutorial && $(MAKE) $(MOPTS) $(MAKEFILE)
+	cd tictoc-tutorial && $(MAKE) -f Makefile.vc
 
