--- a/samples/aloha/.tkenvrc
+++ b/samples/aloha/.tkenvrc
@@ -10,25 +10,31 @@ option senddirect_arrows	{1}
 option anim_methodcalls	{1}
 option methodcalls_delay	{200}
 option animation_msgnames	{1}
+option animation_msgclassnames	{1}
 option animation_msgcolors	{1}
 option penguin_mode	{0}
 option showlayouting	{1}
 option bubbles	{1}
-option animation_speed	{1.44}
+option animation_speed	{3}
 option bkpts_enabled	{1}
+option expressmode_autoupdate	{1}
+config rununtil-event	{}
 config last-nedfile	{}
 config filtobjlist-category	{amqpcsgvo}
 config filtobjlist-maxcount	{100000}
 config editor-findstring	{}
+config rununtil-time	{}
 config editor-regexp	{0}
 config filtobjlist-class	{}
+config rununtil-mode	{Express (tracing off)}
 config filtobjlist-name	{}
+config confirm-exit	{1}
 config editor-backwards	{1}
 config display-treeview	{1}
 config editor-case-sensitive	{0}
 config editor-whole-words	{0}
 config filtobjlist-order	{Class}
-inspector "alohaNet.server.channel utilization" "cOutVector" "2" "386x326+3+19"
 inspector "alohaNet.server.collision multiplicity" "cOutVector" "2" "386x326+396+380"
+inspector "alohaNet.server.channel utilization" "cOutVector" "2" "386x326+3+19"
 inspector "alohaNet.server.collision length" "cOutVector" "2" "386x326+3+378"
 
