*** empty log message ***

--- a/samples/queues/omnetpp.ini
+++ b/samples/queues/omnetpp.ini
@@ -17,8 +17,8 @@ status-frequency = 50000
 performance-display = no
 
 [Tkenv]
-# Change the 1 to 2 for the ring demo
-default-run= 1
+# Uncomment the line below to set up Run 1 automatically on startup
+#default-run= 1
 use-mainwindow = yes
 print-banners = yes
 slowexec-delay = 300ms
