--- a/samples/hist/Makefile.vc
+++ b/samples/hist/Makefile.vc
@@ -99,4 +99,4 @@ re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+hist.obj: hist.cpp
