--- a/samples/tokenring/Makefile.vc
+++ b/samples/tokenring/Makefile.vc
@@ -105,4 +105,5 @@ re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+token.obj: token.cpp \
+  token.h
