--- a/samples/cqn/Makefile.vc
+++ b/samples/cqn/Makefile.vc
@@ -126,4 +126,5 @@ re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+queue.obj: queue.cpp
+switch.obj: switch.cpp
