--- a/samples/fddi/Makefile.vc
+++ b/samples/fddi/Makefile.vc
@@ -135,4 +135,14 @@ re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+fddi_mac.obj: fddi_mac.cpp \
+  fddi_def.h \
+  fddi_mac.h
+othermod.obj: othermod.cpp \
+  otherdef.h \
+  fddi_def.h \
+  othermod.h
+ssm_ifs.obj: ssm_ifs.cpp \
+  ssmifdef.h \
+  fddi_def.h \
+  ssm_ifs.h
