--- a/samples/hcube/Makefile.vc
+++ b/samples/hcube/Makefile.vc
@@ -126,4 +126,7 @@ re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+gensink.obj: gensink.cpp \
+  gensink.h
+hc_rte.obj: hc_rte.cpp \
+  hc_rte.h
