--- a/samples/p-to-p/Makefile.vc
+++ b/samples/p-to-p/Makefile.vc
@@ -123,4 +123,6 @@ re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+ppif.obj: ppif.cpp
+ppsink.obj: ppsink.cpp
+ppsource.obj: ppsource.cpp
