--- a/samples/queueing/Makefile.vc
+++ b/samples/queueing/Makefile.vc
@@ -150,4 +150,13 @@ re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+classifier.obj: classifier.cpp
+delay.obj: delay.cpp
+pqueue.obj: pqueue.cpp \
+  pqueue.h \
+  server.h
+server.obj: server.cpp \
+  server.h \
+  pqueue.h
+sink.obj: sink.cpp
+source.obj: source.cpp
