--- a/src/envir/Makefile.vc
+++ b/src/envir/Makefile.vc
@@ -55,6 +55,22 @@ clean:
 	-del *.ilk *.idb *.pdb *.pch 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
+akaroarng.obj: akaroarng.cc \
+  ../../include/cenvir.h \
+  ../../include/util.h \
+  ../../include/cexception.h \
+  akaroarng.h \
+  ../../include/defs.h \
+  ../../include/opp_string.h \
+  ../../include/macros.h \
+  ../../include/crng.h \
+  ../../include/cconfig.h \
+  ../../include/onstartup.h \
+  ../../include/carray.h \
+  ../../include/ctypes.h \
+  ../../include/cobject.h \
+  ../../include/cpolymorphic.h \
+  ../../include/globals.h
 akoutvectormgr.obj: akoutvectormgr.cc \
   ../../include/cenvir.h \
   omnetapp.h \
@@ -101,6 +117,8 @@ cenvir.obj: cenvir.cc \
   ../../include/cmodule.h \
   speedmtr.h \
   filemgrs.h \
+  akaroarng.h \
+  akoutvectormgr.h \
   ../../include/defs.h \
   ../../include/globals.h \
   ../../include/cobject.h \
@@ -124,7 +142,8 @@ cenvir.obj: cenvir.cc \
   platdep.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
-  ../../include/cdefaultlist.h
+  ../../include/cdefaultlist.h \
+  ../../include/macros.h
 cinifile.obj: cinifile.cc \
   ../../include/cenvir.h \
   ../../include/util.h \
@@ -134,8 +153,8 @@ cinifile.obj: cinifile.cc \
   ../../include/defs.h \
   envdefs.h \
   ../../include/cconfig.h \
-  ../../include/cpolymorphic.h \
-  ../../include/opp_string.h
+  ../../include/opp_string.h \
+  ../../include/cpolymorphic.h
 cxmldoccache.obj: cxmldoccache.cc \
   ../../include/cpolymorphic.h \
   cxmldoccache.h \
