*** empty log message ***

--- a/samples/tictoc/omnetpp.ini
+++ b/samples/tictoc/omnetpp.ini
@@ -2,7 +2,12 @@
 # Lines beginning with `#' are comments
 
 [Parameters]
-# truncnormal() returns values from the normal distribution truncated to nonnegative values
+
+tictoc4.*.limit = 5
+
+# argument to exponential() is the mean; truncnormal() returns values from 
+# the normal distribution truncated to nonnegative values
+tictoc6.tic.delayTime = exponential(3)
 tictoc6.toc.delayTime = truncnormal(3,1)
 
 tictoc9.n = 5
