*** empty log message ***

--- a/samples/tictoc/omnetpp.ini
+++ b/samples/tictoc/omnetpp.ini
@@ -3,7 +3,7 @@
 
 [Parameters]
 
-tictoc4.*.limit = 5
+tictoc4.toc.limit = 5
 
 # argument to exponential() is the mean; truncnormal() returns values from 
 # the normal distribution truncated to nonnegative values
