--- a/Makefile.vc
+++ b/Makefile.vc
@@ -180,10 +180,10 @@ tokenring:
 # Documentation
 #
 apis:
-	cd /d $(OMNETPP_DOC_DIR:/=\) && $(MAKE) $(MOPTS) $(MAKEFILE) apis
+	cd /d $(OMNETPP_DOC_DIR:/=\)\src && $(MAKE) $(MOPTS) $(MAKEFILE) apis
 
 docu:
-	cd /d $(OMNETPP_DOC_DIR:/=\) && $(MAKE) $(MOPTS) $(MAKEFILE)
+	cd /d $(OMNETPP_DOC_DIR:/=\)\src && $(MAKE) $(MOPTS) $(MAKEFILE)
 
 #
 # Tests
